[gd_scene load_steps=9 format=3 uid="uid://dhnboxigit81w"]

[ext_resource type="Script" path="res://src/scripts/ui/ui.gd" id="1_5k2n2"]
[ext_resource type="Texture2D" uid="uid://dbtv8nm1ai1ew" path="res://assets/textures/items/Gems and Coins/Gems/spr_coin_azu.png" id="1_hirnb"]
[ext_resource type="FontFile" uid="uid://bqni1ymrlb3dt" path="res://assets/fonts/GrapeSoda.ttf" id="2_2e55d"]
[ext_resource type="FontFile" uid="uid://don4g1rqub3y3" path="res://assets/fonts/Play Leaves.otf" id="4_c3e0x"]

[sub_resource type="LabelSettings" id="LabelSettings_soott"]
font = ExtResource("4_c3e0x")
font_size = 45
font_color = Color(0.702683, 0.198932, 0.247663, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3lfg2"]
font = ExtResource("4_c3e0x")
font_size = 45
font_color = Color(0.937255, 0.470588, 0.156863, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pn75j"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbnpp"]
bg_color = Color(0.937255, 0.470588, 0.156863, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_5k2n2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(24, 42)
scale = Vector2(3, 3)
texture = ExtResource("1_hirnb")
hframes = 4

[node name="Label_coins" type="Label" parent="."]
offset_left = 47.0
offset_top = 24.0
offset_right = 160.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(0, 0, 0, 0.847059)
theme_override_fonts/font = ExtResource("2_2e55d")
theme_override_font_sizes/font_size = 40
text = "X0"

[node name="AlertLabel" type="Label" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_soott")

[node name="Dash_Alerte" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -47.0
offset_right = 161.0
grow_vertical = 0
label_settings = SubResource("LabelSettings_3lfg2")

[node name="DashCooldownProgress" type="ProgressBar" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 334.0
offset_top = -42.0
offset_right = 571.0
offset_bottom = -4.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_styles/background = SubResource("StyleBoxFlat_pn75j")
theme_override_styles/fill = SubResource("StyleBoxFlat_tbnpp")
max_value = 1.0
value = 1.0
